--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#eeeeee"
     android:orientation="vertical"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <!-- 타이틀바 -->
@@ -11,33 +11,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Notice"
+            android:id="@+id/NoticeTitle"
             android:textSize="20sp"
             android:textColor="#fff"
             android:gravity="center"
-            android:background="#ff7a00"
+            android:background="#00677E"
             android:layout_width="match_parent"
             android:layout_height="53dp" />
     </LinearLayout>
     <!-- //end 타이틀바 -->
 
     <!-- Notice -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:orientation="vertical"
+        android:gravity ="center"
+        android:fillViewport="true"
+        android:layout_marginTop="0dp"
+        android:id="@+id/scrollView">
     <LinearLayout
         android:padding="24dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/txtText"
+            android:id="@+id/NoticeText"
             android:textSize="15sp"
             android:textColor="#000"
             android:alpha="0.87"
-            android:gravity="center"
+            android:gravity="left"
             android:layout_marginBottom="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <!-- Notice -->
+    </ScrollView>
 
     <View
         android:background="#66bdbdbd"
@@ -62,4 +72,5 @@
             android:onClick="mOnClose"/>
     </LinearLayout>
     <!--// 닫기 버튼 -->
+
 </LinearLayout>
