--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -46,8 +46,7 @@
             android:textColor="#ffffff"
             android:id="@+id/nav_Covidlist"
             android:layout_marginTop="298dp"
-            android:layout_marginLeft="44dp"
-            android:onClick="nav_Covidlist">
+            android:layout_marginLeft="44dp">
         </TextView>
 
         <LinearLayout
@@ -72,8 +71,7 @@
             android:textColor="#ffffff"
             android:id="@+id/nav_Bachelorlist"
             android:layout_marginTop="368dp"
-            android:layout_marginLeft="44dp"
-            android:onClick="nav_Bachelorlist">
+            android:layout_marginLeft="44dp">
         </TextView>
 
         <LinearLayout
@@ -98,8 +96,7 @@
             android:textColor="#ffffff"
             android:id="@+id/nav_Employmentlist"
             android:layout_marginTop="438dp"
-            android:layout_marginLeft="44dp"
-            android:onClick="nav_Employmentlist">
+            android:layout_marginLeft="44dp">
         </TextView>
 
         <LinearLayout
