--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="280dp"
     android:layout_height="match_parent"
@@ -11,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="#5559b4">
+        android:background="#5559b4"
+        android:id="@+id/nav_bar"
+        tools:ignore="InvalidId">
 
         <TextView
             android:layout_width="wrap_content"
